# welcome-aboard

./: README.md  pyproject.toml  pytest.ini  wsgi.py
app/: __init__.py  api.py  config.py
app/decorators/: user.py
app/models/: auth_token.py  category.py  comment.py  post.py  tag.py  user.py
app/serializers/: __init__.py  auth_token.py  category.py  comment.py  post.py  tag.py  user.py
app/utils/: converter.py
app/views/: __init__.py  category.py  comment.py  post.py  tag.py  user.py
tests/: conftest.py
tests/views/: test_user.py
