[tool.poetry]
name = "welcome-aboard"
version = "0.1.0"
description = ""
authors = ["ellisjoe611 <ellisjoe@gmail.com>"]
readme = "README.md"
packages = [{include = "welcome_aboard"}]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.9"
werkzeug = "=0.16.1"
flask = "^1.1.1"
Flask-Cors = "^3.0.8"
Flask-Classful = "^0.14.2"
mongoengine = "0.20.0"
funcy = "^1.13"
ua-parser = "^0.8.0"
arrow = "^0.15.2"
marshmallow = "^3.2.0"
marshmallow-enum = "^1.5.1"
marshmallow-oneofschema = "^2.0.1"
apispec = "^3.2.0"
flask-apispec = "^0.8.5"
inflection = "^0.3.1"
user-agents = "^2.0"
blinker = "^1.4"
redis = "^3.3.8"
pika = "^1.1.0"
dramatiq = "^1.7.0"
dramatiq_dashboard = "^0.2.2"
watch = "^0.2.7"
sentry-sdk = "^0.12.2"
Flask-Babel = "^0.12.2"
passlib = "^1.7.1"
requests = "^2.22"
flask-mongoengine = "^0.9.5"
pymongo = { version = "=3.12.1", extras = ["srv"] }
boto3 = "^1.10"
gevent = "=20.9.0"
shortuuid = "1.0.11"

multipledispatch = "^0.6.0"
flask_dramatiq = "^0.6.0"
permission = "^0.4.1"
firebase_admin = "^3.2.1"
webargs = "=5.5.2"
jsondiff = "^1.2"
#locustio = "^0.14.4"
elasticmock = "^1.5.0"
jsonstreams = "^0.4.2"
smart_open = "^1.9.0"
zipstream = "^1.1.4"
slacker = "^0.14.0"
loguru = "^0.4.1"
numpy = "=1.21"
openpyxl = "^3.0.3"
pyexecjs = "^1.5.1"
metadata_parser = "^0.10.0"
redlock = "^1.2.0"
fakeredis = "^1.4.1"
gspread = "^3.6.0"
oauth2client = "^4.1.3"
pycairo = "^1.19.1"
azure-servicebus = "7.8.1"
paramiko = "^2.7.2"
azure-storage-blob = "^12.6.0"
scipy = "^1.5.4"
piexif = "^1.1.3"
azureml = "^0.2.7"
azure-common = "^1.1.26"
azureml-core = "1.20.0"
ddtrace = "^0.46.0"
ring = "^0.7.3"
colorama = "^0.4.4"
#azureml-dataprep = "^2.15.0"
#work-evaluator = "^1.5"
google-cloud-vision = "^2.3.2"
icecream = "^2.1.1"
slack-sdk = "^3.10.1"
ai-sqip = "^1.4.0"
pillow = "^8.4.0"
jazalbox = "^0.2.2"
pynumparser = "^1.4.1"
cachetools = "^4.2.4"
cryptography = "^36.0.1"
open3d = "^0.14.0"
MarkupSafe = "2.0.1"
pycryptodome = "^3.15.0"
greenlet = "0.4.17"
azure-keyvault-secrets = "4.7.0"

[tool.poetry.dev-dependencies]
pytest = "=5.1.1"
#pytest="^5.4.1"
pytest-flask = "^0.15.0"
pytest-env = "^0.6.2"
pytest-factoryboy = "^2.0.3"
mongomock = "^3.18.0"
flask-shell-ipython = "^0.4.1"
pytest-rerunfailures = "^9.0"
pytest-xdist = "^1.31.0"
pytest-cov = "^2.8.1"
opencv-python = "^4.4.0"
fakeredis = "^1.4.3"
factory-boy = "=3.0.1" # 3.1.0에서 인터페이스 달라짐
black = "^21.10b0"
pylint = "^2.11.1"
pre-commit = "^2.15.0"
mock = "^4.0.3"

[[tool.poetry.source]]
name = "bluewhale"
url = "https://pypi.bluewhale.kr/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
